gcc/testsuite/rust/rustc/ui/static/static-mut-not-constant_dg.rs
static mut a: Box<isize> = Box::new(3);
// { dg-error ".E0015." "" { target *-*-* } .-1 }

fn main() {}

